--- a/PyBer_Challenge.ipynb
+++ b/PyBer_Challenge.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 198,
    "metadata": {
     "scrolled": true
    },
@@ -145,7 +145,7 @@
        "4            46  Urban  "
       ]
      },
-     "execution_count": 145,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "Name: ride_id, dtype: int64"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "Name: driver_count, dtype: int64"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "Name: fare, dtype: float64"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
        "Name: fare, dtype: float64"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
        "Urban                   16.571468  "
       ]
      },
-     "execution_count": 151,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
        "Urban                   16.571468  "
       ]
      },
-     "execution_count": 152,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -509,150 +509,55 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>city</th>\n",
-       "      <th>date</th>\n",
-       "      <th>fare</th>\n",
-       "      <th>ride_id</th>\n",
-       "      <th>driver_count</th>\n",
-       "      <th>type</th>\n",
+       "      <th>Total Rides</th>\n",
+       "      <th>Total Drivers</th>\n",
+       "      <th>Total Fares</th>\n",
+       "      <th>Average Fare per Ride</th>\n",
+       "      <th>Average Fare per Driver</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Lake Jonathanshire</td>\n",
-       "      <td>2019-01-14 10:14:22</td>\n",
-       "      <td>13.83</td>\n",
-       "      <td>5739410935873</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Urban</td>\n",
+       "      <th>Rural</th>\n",
+       "      <td>125</td>\n",
+       "      <td>78</td>\n",
+       "      <td>$4,327.93</td>\n",
+       "      <td>$34.62</td>\n",
+       "      <td>$55.49</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>South Michelleport</td>\n",
-       "      <td>2019-03-04 18:24:09</td>\n",
-       "      <td>30.24</td>\n",
-       "      <td>2343912425577</td>\n",
-       "      <td>72</td>\n",
-       "      <td>Urban</td>\n",
+       "      <th>Suburban</th>\n",
+       "      <td>625</td>\n",
+       "      <td>490</td>\n",
+       "      <td>$19,356.33</td>\n",
+       "      <td>$30.97</td>\n",
+       "      <td>$39.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Port Samanthamouth</td>\n",
-       "      <td>2019-02-24 04:29:00</td>\n",
-       "      <td>33.44</td>\n",
-       "      <td>2005065760003</td>\n",
-       "      <td>57</td>\n",
-       "      <td>Urban</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Rodneyfort</td>\n",
-       "      <td>2019-02-10 23:22:03</td>\n",
-       "      <td>23.44</td>\n",
-       "      <td>5149245426178</td>\n",
-       "      <td>34</td>\n",
-       "      <td>Urban</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>South Jack</td>\n",
-       "      <td>2019-03-06 04:28:35</td>\n",
-       "      <td>34.58</td>\n",
-       "      <td>3908451377344</td>\n",
-       "      <td>46</td>\n",
-       "      <td>Urban</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2370</th>\n",
-       "      <td>Michaelberg</td>\n",
-       "      <td>2019-04-29 17:04:39</td>\n",
-       "      <td>13.38</td>\n",
-       "      <td>8550365057598</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Rural</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2371</th>\n",
-       "      <td>Lake Latoyabury</td>\n",
-       "      <td>2019-01-30 00:05:47</td>\n",
-       "      <td>20.76</td>\n",
-       "      <td>9018727594352</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Rural</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2372</th>\n",
-       "      <td>North Jaime</td>\n",
-       "      <td>2019-02-10 21:03:50</td>\n",
-       "      <td>11.11</td>\n",
-       "      <td>2781339863778</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Rural</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2373</th>\n",
-       "      <td>West Heather</td>\n",
-       "      <td>2019-05-07 19:22:15</td>\n",
-       "      <td>44.94</td>\n",
-       "      <td>4256853490277</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Rural</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2374</th>\n",
-       "      <td>Newtonview</td>\n",
-       "      <td>2019-04-25 10:20:13</td>\n",
-       "      <td>55.84</td>\n",
-       "      <td>9990581345298</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Rural</td>\n",
+       "      <th>Urban</th>\n",
+       "      <td>1,625</td>\n",
+       "      <td>2,405</td>\n",
+       "      <td>$39,854.38</td>\n",
+       "      <td>$24.53</td>\n",
+       "      <td>$16.57</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2375 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    city                 date   fare        ride_id  \\\n",
-       "0     Lake Jonathanshire  2019-01-14 10:14:22  13.83  5739410935873   \n",
-       "1     South Michelleport  2019-03-04 18:24:09  30.24  2343912425577   \n",
-       "2     Port Samanthamouth  2019-02-24 04:29:00  33.44  2005065760003   \n",
-       "3             Rodneyfort  2019-02-10 23:22:03  23.44  5149245426178   \n",
-       "4             South Jack  2019-03-06 04:28:35  34.58  3908451377344   \n",
-       "...                  ...                  ...    ...            ...   \n",
-       "2370         Michaelberg  2019-04-29 17:04:39  13.38  8550365057598   \n",
-       "2371     Lake Latoyabury  2019-01-30 00:05:47  20.76  9018727594352   \n",
-       "2372         North Jaime  2019-02-10 21:03:50  11.11  2781339863778   \n",
-       "2373        West Heather  2019-05-07 19:22:15  44.94  4256853490277   \n",
-       "2374          Newtonview  2019-04-25 10:20:13  55.84  9990581345298   \n",
+       "         Total Rides Total Drivers Total Fares Average Fare per Ride  \\\n",
+       "Rural            125            78   $4,327.93                $34.62   \n",
+       "Suburban         625           490  $19,356.33                $30.97   \n",
+       "Urban          1,625         2,405  $39,854.38                $24.53   \n",
        "\n",
-       "      driver_count   type  \n",
-       "0                5  Urban  \n",
-       "1               72  Urban  \n",
-       "2               57  Urban  \n",
-       "3               34  Urban  \n",
-       "4               46  Urban  \n",
-       "...            ...    ...  \n",
-       "2370             6  Rural  \n",
-       "2371             2  Rural  \n",
-       "2372             1  Rural  \n",
-       "2373             4  Rural  \n",
-       "2374             1  Rural  \n",
-       "\n",
-       "[2375 rows x 6 columns]"
+       "         Average Fare per Driver  \n",
+       "Rural                     $55.49  \n",
+       "Suburban                  $39.50  \n",
+       "Urban                     $16.57  "
       ]
      },
-     "execution_count": 153,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +570,7 @@
     "pyber_summary_df[\"Average Fare per Ride\"] = pyber_summary_df[\"Average Fare per Ride\"].map(\"${:,.2f}\".format)\n",
     "pyber_summary_df[\"Average Fare per Driver\"] = pyber_summary_df[\"Average Fare per Driver\"].map(\"${:,.2f}\".format)\n",
     "\n",
-    "pyber_data_df"
+    "pyber_summary_df"
    ]
   },
   {
@@ -677,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +680,7 @@
        "4            46  Urban  "
       ]
      },
-     "execution_count": 164,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +761,7 @@
        "      2019-01-06 07:38:40  47.33"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +800,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
        "      <th>type</th>\n",
        "      <th>date</th>\n",
        "      <th>fare</th>\n",
@@ -904,35 +808,30 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>Rural</td>\n",
        "      <td>2019-01-01 09:45:36</td>\n",
        "      <td>43.69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>Rural</td>\n",
        "      <td>2019-01-02 11:18:32</td>\n",
        "      <td>52.12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>Rural</td>\n",
        "      <td>2019-01-03 19:51:01</td>\n",
        "      <td>19.90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>Rural</td>\n",
        "      <td>2019-01-04 03:31:26</td>\n",
        "      <td>24.88</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>Rural</td>\n",
        "      <td>2019-01-06 07:38:40</td>\n",
        "      <td>47.33</td>\n",
@@ -942,15 +841,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   index   type                 date   fare\n",
-       "0      0  Rural  2019-01-01 09:45:36  43.69\n",
-       "1      1  Rural  2019-01-02 11:18:32  52.12\n",
-       "2      2  Rural  2019-01-03 19:51:01  19.90\n",
-       "3      3  Rural  2019-01-04 03:31:26  24.88\n",
-       "4      4  Rural  2019-01-06 07:38:40  47.33"
+       "    type                 date   fare\n",
+       "0  Rural  2019-01-01 09:45:36  43.69\n",
+       "1  Rural  2019-01-02 11:18:32  52.12\n",
+       "2  Rural  2019-01-03 19:51:01  19.90\n",
+       "3  Rural  2019-01-04 03:31:26  24.88\n",
+       "4  Rural  2019-01-06 07:38:40  47.33"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +977,7 @@
        "2019-01-01 14:52:06    NaN     31.15    NaN"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1093,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1072,7 @@
        "2019-01-01 05:23:21    NaN       NaN  10.75"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1187,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1197,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -1224,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -1388,7 +1287,7 @@
        "2019-04-28  191.85   1357.75  2238.29"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1401,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -1429,6 +1328,13 @@
     "plt.xlabel(\"\")\n",
     "plt.savefig(\"/Users/mikequick/Documents/DU Data Boot Camp/Module 5 - PyBer/PyBer_Analysis/analysis/PyBer_fare_summary.png\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
